switch back to scss

--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -25,7 +25,7 @@
                   <a class="dropdown-item" href="/casestudies/city/overview"><b>City</b>: Edge, Cloud and IoT solutions for Smart Cities</a>
                   <a class="dropdown-item" href="/casestudies/outpost/overview"><b>Outpost</b>: Rapid infrastructure for remote areas</a>
                   <a class="dropdown-item" href="/casestudies/retail/overview"><b>Retail</b>: In-store (real-time) analytics</a>
-                  <a class="dropdown-item" href="/casestudies/factory/overview"><b>Factory</b>: Smart manufacturing</a>
+                  <!-- <a class="dropdown-item" href="/casestudies/factory/overview"><b>Factory</b>: Smart manufacturing</a> -->
                   <a class="dropdown-item" href="/casestudies/science/overview"><b>Science</b>: Big Data at the Edge and in the Cloud for Science</a>
                 </div>
               </li>
@@ -57,7 +57,7 @@
                 <a class="nav-link" href="https://nuvla.io/ui/sign-in" id="navbarDropdownMenuLink-sign-in" aria-haspopup="true" aria-expanded="false">Sign In</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link red-link" href="https://nuvla.io/ui/sign-up" id="navbarDropdownMenuLink-sign-up" aria-haspopup="true" aria-expanded="false">Sign Up</a>
+                <a class="nav-link link" href="https://nuvla.io/ui/sign-up" id="navbarDropdownMenuLink-sign-up" aria-haspopup="true" aria-expanded="false">Sign Up</a>
               </li>
             </ul>
           </div>
