--- a/_layouts/about-us.html
+++ b/_layouts/about-us.html
@@ -10,7 +10,7 @@
     {{ page.content }}
 
     <h2 class="text-center pt-50">Meet the team!</h2>
-		<section class="section-is-it-for">
+		<section class="section-about section-is-it-for">
 			<div class="container">
 				<div class="row justify-content-center icon-is-it-for pb-20 pt-20">
 		      {% for post in site.staff %}
