--- a/sass/theme/_section-about.scss
+++ b/sass/theme/_section-about.scss
@@ -55,4 +55,13 @@
 			outline: none;
 		}
 	}
+  .bandw img {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+  }
+
+  .bandw:hover img {
+    -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(0%);
+  }
 }
