--- a/sass/theme/_variables.scss
+++ b/sass/theme/_variables.scss
@@ -8,6 +8,7 @@ $text-color		       : #555555;
 $border-color        : #dddddd;
 $gray-bg             : #EDF0F1;
 $color-primary 			 : #9B1313;
+$color-primary-light : #DF3123;
 $gray-footer         : #E4E6E7;
 $bg-grey-f9		       : #f9f9f9;
 $light			         : #fff;
