--- a/sass/theme/_banner.scss
+++ b/sass/theme/_banner.scss
@@ -4,9 +4,9 @@
 		background: $p1-color;
 	}
 	&.banner-slider-1 {
-		background: url(/img/banner/background.jpg) no-repeat bottom center/cover;
+		background: url(/img/banner/city.png) no-repeat bottom center/cover;
     @include mobile {
-      background: url(/img/banner/background.jpg) no-repeat;
+      background: url(/img/banner/city.png) no-repeat;
       background-size: cover;
       background-position: left center;
     }
@@ -21,19 +21,19 @@
     background-size: auto 100%;
     background-position: left center;
 	}
-	&.banner-nuvlacity {
-		background: url(/img/banner/nuvlacity.png) no-repeat bottom center/cover;
+	&.banner-city {
+		background: url(/img/banner/city.png) no-repeat bottom center/cover;
 		@include mobile {
-		 	background: url(/img/banner/nuvlacity.png) no-repeat;
+		 	background: url(/img/banner/city.png) no-repeat;
 		}
     p {
       background-color: transparentize(black, 0.7) !important;
 		}
 	}
-	&.banner-nuvlaoutpost {
-		background: url(/img/banner/nuvlaoutpost.png) no-repeat bottom center/cover;
+	&.banner-outpost {
+		background: url(/img/banner/outpost.png) no-repeat bottom center/cover;
 		@include mobile {
-		 	background: url(/img/banner/nuvlaoutpost.png) no-repeat;
+		 	background: url(/img/banner/outpost.png) no-repeat;
 		}
     p {
       background-color: transparentize(black, 0.5) !important;
@@ -42,10 +42,22 @@
       background-color: transparentize(black, 0.5) !important;
 		}
 	}
-	&.banner-nuvlascience {
-		background: url(/img/banner/nuvlascience.png) no-repeat bottom center/cover;
+	&.banner-retail {
+		background: url(/img/banner/retail.png) no-repeat bottom center/cover;
 		@include mobile {
-		 	background: url(/img/banner/nuvlascience.png) no-repeat;
+		 	background: url(/img/banner/retail.png) no-repeat;
+		}
+    p {
+      background-color: transparentize(black, 0.5) !important;
+		}
+    h2 {
+      background-color: transparentize(black, 0.5) !important;
+		}
+	}
+	&.banner-science {
+		background: url(/img/banner/science.png) no-repeat bottom center/cover;
+		@include mobile {
+		 	background: url(/img/banner/science.png) no-repeat;
 		}
     p {
       background-color: transparentize(black, 0.5) !important;
@@ -78,10 +90,10 @@
       background-color: transparentize(black, 0.5) !important;
 		}
 	}
-	&.banner-slipstream, &.banner-developer {
-		background: url(/img/banner/slipstream.png) no-repeat bottom center/cover;
+	&.banner-nuvla-io, &.banner-developer {
+		background: url(/img/banner/nuvla-io.png) no-repeat bottom center/cover;
 		@include mobile {
-		 	background: url(/img/banner/slipstream.png) no-repeat;
+		 	background: url(/img/banner/nuvla-io.png) no-repeat;
 		}
     p {
       background-color: transparentize(black, 0.5) !important;
