--- a/_includes/welcome-webinar.html
+++ b/_includes/welcome-webinar.html
@@ -16,8 +16,8 @@
 					</div>
 					<div class="col-md-6 col-sm-12 col-xs-12 newsletter nopadding">
 						<div class="newsletter-text">
-							<h3 class="fw700">Join our next 1 hour interactive webinar:</h3>
-							<h3 class="fw700">Thursday January 16 at 16:00 CET (Geneva/Paris)</h3>
+							<h3 class="fw700">Join our next webinar:</h3>
+							<h3 class="fw700">Next date to be announced soon</h3>
 							<a class="btn-sixsq color-dark mt-20" href="/media/webinar">Register</a>
 						</div>
 					</div>
