--- a/_layouts/casestudies-overview-simple.html
+++ b/_layouts/casestudies-overview-simple.html
@@ -15,7 +15,7 @@
 			<div class="container">
 				<div class="row justify-content-center pt-50">
 					<div class="col-md-12 section-title text-center">
-						<h2 class="pb-10 fw700">Discover real world applications of {{ page.product-name }}.</h2>
+						<h2 class="pb-10 fw700">Discover how Nuvla.io enables {{ page.product-name }}.</h2>
 					</div>
 				</div>
 			</div>
