--- a/_includes/whats-next.html
+++ b/_includes/whats-next.html
@@ -4,9 +4,8 @@
 				<div class="container">
 					<div class="content-text text-center text-white pb-50 pt-80">
 						<h2 class="text-white fw700">What’s next?</h2>
-						<h3 class="text-white fw600">Interested and want to know more?</h3>
-						<p class="text-white fw300 mt-10">We’d be pleased to provide you with further information.</p>
-						<p><a class="text-white btn-sixsq mt-20 text-center" href="/about/contact#get-in-touch"><i class="far fa-plus-square"></i>  Get in touch</a></p>
+						<h3 class="text-white fw600">Start your own journey on <a href="/nuvla-io/overview">Nuvla.io</a></h3>
+						<p><a class="text-white btn-sixsq mt-20 text-center" href="https://nuvla.io/ui/sign-up"><i class="far fa-plus-square"></i>  Sign up</a></p>
 					</div>
 				</div>
 			</div>
