--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -59,7 +59,7 @@
   					</div>
   					<div class="col-md-6 col-sm-12">
   						<div class="section-title text-center pb-20">
-    						<h2 class="pb-10 fw700 text-center">Answering the needs of.</h2>
+    						<h2 class="pb-10 fw700 text-center">Enablement partner for.</h2>
   							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
 						</div>
   						<div class="focus-need">
