--- a/_includes/nuvla-io-sub-menu.html
+++ b/_includes/nuvla-io-sub-menu.html
@@ -1,5 +1,5 @@
 		<!-- Start menu-product -->	
-		<section class="menu-product menu-product-{{ page.product }} pb-10 pt-20">
+		<section class="menu-product menu-product-{{ page.product }}">
         <nav class="container navbar navbar-toggleable-sm navbar-inverse sub-navbar">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#subNavbarNavDropdown" aria-controls="subNavbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
