--- a/_includes/highlighted-with-image-no-title-item-no-truncation.html
+++ b/_includes/highlighted-with-image-no-title-item-no-truncation.html
@@ -1,19 +1,24 @@
 			<div class="col-md-4 col-sm-6 col-xs-12 item icon animated">
-            {% if post.image %}
-              <img src="{{ post.image }}" alt="{{ post.title }}" width="100%">
-            {% endif %}
-            {% if post.icon %}
-              <div class="icon-title">
-                <i class="fa {{ post.icon }}"></i>
-              </div>
-            {% endif %}
-			  <p class="mt-10 text-center">{{ post.content | strip_html }}</p>
-			  <p class="button mt-10 text-center">
-              {% if post.link %}
-                {% assign url = post.link  %}
-              {% else %}
-                {% assign url = post.url  %}
-              {% endif %}
-                <a class="btn-sixsq mt-20 color-3 text-center" href="{{ url }}"><i class="far fa-plus-square"></i>  Take a Look</a>
-			  </p>
+        {% unless height %}
+          {% assign height = "250px" %}
+        {% endunless %}
+        <div class="cards" style="height: {{ height }};">
+          <div class="top text-center">
+          {% if post.image %}
+            <img src="{{ post.image }}" alt="{{ post.title }}"/>
+          {% endif %}
+          {% if post.icon %}
+            <div class="icon-title">
+              <i class="fa {{ post.icon }}"></i>
+            </div>
+          {% endif %}
+          </div>
+          <p class="mt-10 text-center center">{{ post.content | strip_html }}</p>
+          {% if post.link %}
+            {% assign url = post.link  %}
+          {% else %}
+            {% assign url = post.url  %}
+          {% endif %}
+          <a class="btn-sixsq color-3 text-center bottom" href="{{ url }}"><i class="far fa-plus-square"></i>  Take a Look</a>
+        </div>
 			</div>
