--- a/_layouts/oops_404.html
+++ b/_layouts/oops_404.html
@@ -4,7 +4,7 @@
   <body class="sixsq bg-grey-f9">
     {% include standard-header.html %}
 	<main>
-    <div class="container">
+    <div class="container pt-70">
       <center>
         <br/>
         <h2>Oops! Can't find this page :-(</h2>        
