--- a/_layouts/jobs.html
+++ b/_layouts/jobs.html
@@ -6,13 +6,14 @@
 	<main>
     {% include {{ page.product }}-banner.html %}
     {% include {{ page.product }}-sub-menu.html %}
-    {{ page.content }}
 		<!-- Start what do you get? -->	
 		<section class="section-is-it-for">
 			<div class="container">
 				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
           {% for post in site.jobs %}
             {% include highlighted-with-image-item.html %}
+          {% else %}
+            {{ page.content | markdownify }}
           {% endfor %}
         </div>
 			</div>
