--- a/_layouts/casestudies-overview.html
+++ b/_layouts/casestudies-overview.html
@@ -17,7 +17,7 @@
 			</div>
 		</section>
 		<div class="justify-content-center minimum-height:1000px">
-      {% for post in site.casestudies %}
+      {% for post in site.solutions %}
         {% if post.product == page.product %}
           {% if post.class == 'usecase' %}
             <div class="widget-section text-center mt-20 mb-20"><i class="fas fa-circle"></i></div>
@@ -31,7 +31,7 @@
 			<div class="container">
 				<div class="row justify-content-center pb-50 pt-50">
 					<div class="col-md-12 section-title text-center">
-							<h2 class="pb-10 fw700">Discover the main features.</h2>
+							<h2 class="pb-10 fw700">Top benefits for this customer.</h2>
 					</div>
 				</div>
 				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
