--- a/_includes/welcome-services-item.html
+++ b/_includes/welcome-services-item.html
@@ -1,6 +1,6 @@
 			<div class="service {{ post.css-class }}">
 				<div class="container">
-					<div class="row">{{ post.align-text }}
+					<div class="row">
           {% if thecycle == 'even' or post.align-text == 'right' %}
             <div class="col-md-6 col-sm-12"></div>
           {% endif %}
