--- a/_includes/nuvla-io-sub-menu.html
+++ b/_includes/nuvla-io-sub-menu.html
@@ -10,13 +10,13 @@
           <div class="collapse navbar-collapse justify-content-end" id="subNavbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-overview" href="/{{ page.product}}/overview">Overview</a>
+                <a class="nav-link" id="navbarMenuLink-overview" href="/products-and-services/{{ page.product }}/overview">Overview</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-features" href="/{{ page.product }}/features">Features</a>
+                <a class="nav-link" id="navbarMenuLink-features" href="/products-and-services/{{ page.product }}/features">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-tech-spec" href="/{{ page.product }}/tech-spec">Tech Specs</a>
+                <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/tech-spec">Tech Specs</a>
               </li>
             </ul>
           </div>
