--- a/_layouts/nuvla-io-features.html
+++ b/_layouts/nuvla-io-features.html
@@ -16,7 +16,7 @@
 					</div>
 				</div>
 				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
-          {% for post in site.nuvla-io %}
+          {% for post in site %}
             {% if post.product == page.product %}
               {% if post.class == 'feature' %}
                 {% include highlighted-with-image-item-no-truncation.html %}
