--- a/_layouts/nuvla-io.html
+++ b/_layouts/nuvla-io.html
@@ -16,7 +16,7 @@
 				</div>
 				<div class="row justify-content-center pb-50 pt-50">
 					<div class="product-page-carousel parent-container">
-            {% for post in site.nuvla-io %}
+            {% for post in site.products-and-services %}
               {% if post.product == page.product %}
                 {% if post.class == 'feature' %}
                   {% if post.main-feature == true %}
