--- a/css/main.css
+++ b/css/main.css
@@ -766,15 +766,23 @@ td, th {
     font-size: 600%;
     color: #9B1313; }
 
-.default-banner.banner-1 {
-  background: rgba(255, 255, 255, 0.4); }
-.default-banner.banner-slider-1 {
+.default-banner {
+  background: rgba(255, 255, 255, 0.4);
+  padding: 175px 0 100px 0;
   background: url(/img/banner/city.png) no-repeat bottom center/cover; }
   @media (max-width: 767px) {
-    .default-banner.banner-slider-1 {
+    .default-banner {
       background: url(/img/banner/city.png) no-repeat;
       background-size: cover;
       background-position: left center; } }
+  .default-banner h2.header {
+    font-size: 48px;
+    font-weight: 600;
+    text-transform: uppercase; }
+  .default-banner h2.subheader {
+    font-size: 250%;
+    font-weight: 700;
+    padding: 10px 0 25px 0; }
 
 .banner-page-int {
   background-size: cover;
@@ -1741,71 +1749,80 @@ td, th {
       .section-services .services-satellite .services-content a {
         color: #333;
         background: #fff; }
-  .section-services .services-eosc {
-    background: url(/img/section-services/section-eosc.png) no-repeat;
+  .section-services .services-retail {
+    background: url(/img/section-services/section-retail.png) no-repeat;
     background-repeat: no-repeat;
     background-size: 100% auto;
     background-position: center top;
     height: 100%;
     min-height: 1200px;
     position: relative;
-    z-index: 100; }
+    z-index: 112; }
     @media (min-width: 2000px) {
-      .section-services .services-eosc {
+      .section-services .services-retail {
         min-height: 923px;
         margin-top: -26%;
         z-index: 112; } }
     @media (min-width: 1500px) and (max-width: 2000px) {
-      .section-services .services-eosc {
+      .section-services .services-retail {
         min-height: 916px;
         margin-top: -28%;
         z-index: 112; } }
     @media (min-width: 992px) and (max-width: 1500px) {
-      .section-services .services-eosc {
+      .section-services .services-retail {
         background-size: cover;
         min-height: 830px;
         margin-top: -20%;
         background-position: center center; } }
     @media (min-width: 768px) and (max-width: 992px) {
-      .section-services .services-eosc {
+      .section-services .services-retail {
         background-size: cover;
         margin-top: -30%;
         min-height: 80px;
         background-position: center center; } }
     @media (max-width: 767px) {
-      .section-services .services-eosc {
+      .section-services .services-retail {
         background-size: cover;
         margin-top: -95%;
         min-height: 500px;
         position: relative;
         z-index: 110;
         background-position: center center; } }
-    .section-services .services-eosc .services-content {
-      padding-top: 350px;
+    .section-services .services-retail .services-content {
+      padding-top: 400px;
       height: auto; }
+      @media (min-width: 2000px) {
+        .section-services .services-retail .services-content {
+          padding-top: 420px; } }
+      @media (min-width: 1500px) and (max-width: 2000px) {
+        .section-services .services-retail .services-content {
+          padding-top: 320px; } }
       @media (min-width: 992px) and (max-width: 1500px) {
-        .section-services .services-eosc .services-content {
-          padding-top: 230px; } }
-      @media (max-width: 767px) {
-        .section-services .services-eosc .services-content {
-          padding-top: 300px; } }
+        .section-services .services-retail .services-content {
+          padding-top: 250px; } }
       @media (min-width: 768px) and (max-width: 992px) {
-        .section-services .services-eosc .services-content {
+        .section-services .services-retail .services-content {
+          padding-top: 170px; } }
+      @media (max-width: 767px) {
+        .section-services .services-retail .services-content {
+          padding-top: 250px; } }
+      @media (min-width: 480px) and (max-width: 767px) {
+        .section-services .services-retail .services-content {
           padding-top: 200px; } }
-      .section-services .services-eosc .services-content h2 {
+      .section-services .services-retail .services-content h2 {
         color: #0C79C5;
         font-size: 250%; }
-      .section-services .services-eosc .services-content .line {
+      .section-services .services-retail .services-content .line {
         width: 50%;
         text-align: left; }
-      .section-services .services-eosc .services-content p {
+      .section-services .services-retail .services-content p {
         color: #999;
         font-size: 120%; }
-      .section-services .services-eosc .services-content .logo-helix {
+      .section-services .services-retail .services-content .logo-helix {
         float: left; }
-      .section-services .services-eosc .services-content .text-helix {
+      .section-services .services-retail .services-content .text-helix {
         display: inline-block; }
-      .section-services .services-eosc .services-content a {
+      .section-services .services-retail .services-content a {
         background: #333; }
 
 .section-newsletter {
